--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+# .DS_Store
+.DS_Store
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -35,6 +36,16 @@ MANIFEST
 
 # Installer logs
 pip-log.txt
+*.egg
+MANIFEST
+# .DS_Store
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
